--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "husky": "3.0.8",
-    "lerna": "3.16.5"
+    "lerna": "3.16.5",
+    "prettier": "1.18.2",
+    "pretty-quick": "1.11.1"
   },
   "husky": {
     "hooks": {
+      "pre-commit": "pretty-quick --staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
