--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
   "printWidth": 100,
-  "singleQuote": true
+  "singleQuote": true,
+  "trailingComma": "all",
+  "arrowParens": "always",
+  "jsxBracketSameLine": false,
+  "semi": false
 }
