chore(root): rename publish to release

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "start": "lerna run start --parallel",
-    "publish": "lerna publish"
+    "release": "lerna publish"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
