ci(circleci): initial setup

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   ],
   "scripts": {
     "start": "lerna run start --parallel",
+    "build": "lerna run build",
     "release": "lerna publish"
   },
   "devDependencies": {
