--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   ],
   "scripts": {
     "start": "lerna run start --parallel",
-    "build": "lerna run build",
-    "release": "lerna publish"
+    "build": "lerna run build --since",
+    "release": "lerna publish --yes"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
