ci(circleci): fix build steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,8 @@ jobs:
           name: build
           command: yarn build
       - run:
+          name: Configure git defaults
+          command: git config user.email "dev@cschroeter.net" && git config user.name "Christian Schröter"
+      - run:
           name: release
           command: npm run release || true
