--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,7 @@
       "conventionalCommits": true
     },
     "version": {
-      "message": "chore(release): publish"
+      "message": "chore(release): publish [skip ci]"
     }
   }
 }
