--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "start": "lerna run start --parallel",
-    "build": "lerna run build",
+    "build": "lerna run build --since",
     "release": "lerna publish --yes"
   },
   "devDependencies": {
