--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "lerna run start --parallel",
     "build": "lerna run build",
-    "release": "lerna publish --yes"
+    "release": "lerna publish"
   },
   "devDependencies": {
     "@commitlint/cli": "8.2.0",
