--- a/lerna.json
+++ b/lerna.json
@@ -7,6 +7,10 @@
     "publish": {
       "conventionalCommits": true
     },
+    "changelogPreset": {
+      "name": "conventionalcommits",
+      "issueUrlFormat": "blub/{{id}}"
+    },
     "version": {
       "message": "chore(release): publish [skip ci]"
     }
