--- a/lerna.json
+++ b/lerna.json
@@ -4,16 +4,13 @@
   "useWorkspaces": true,
   "version": "independent",
   "command": {
-    "publish": {
-      "conventionalCommits": true
-    },
-    "changelogPreset": {
-      "name": "conventionalchangelog",
-      "issuePrefixes": ["TEST-"],
-      "issueUrlFormat": "myBugTracker.com/{prefix}{id}"
-    },
     "version": {
-      "message": "chore(release): publish [skip ci]"
+      "message": "chore(release): publish [skip ci]",
+      "conventionalCommits": true,
+      "changelogPreset": {
+        "name": "conventionalcommits",
+        "issueUrlFormat": "myBugTracker.com/{prefix}{id}"
+      }
     }
   }
 }
