--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@commitlint/cli": "9.1.2",
     "@commitlint/config-conventional": "9.1.2",
+    "conventional-changelog-conventionalcommits": "4.4.0",
     "husky": "4.2.5",
     "lerna": "3.22.1",
     "prettier": "2.0.5",
