--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,7 @@
       "message": "chore(release): publish [skip ci]",
       "conventionalCommits": true,
       "changelogPreset": {
-        "name": "angular",
+        "name": "conventionalcommits",
         "issueUrlFormat": "https://jira.ops.expertcity.com/browse/{{id}}",
         "issuePrefixes": ["WME-"]
       }
