--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "build": "lerna run build",
     "release": "lerna publish"
   },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
   "devDependencies": {
-    "@commitlint/cli": "9.1.2",
-    "@commitlint/config-conventional": "9.1.2",
-    "conventional-changelog-conventionalcommits": "4.4.0",
-    "husky": "4.2.5",
-    "lerna": "3.22.1",
-    "prettier": "2.0.5",
-    "pretty-quick": "2.0.1"
+    "@commitlint/cli": "12.1.4",
+    "@commitlint/config-conventional": "12.1.4",
+    "@types/node": "15.12.4",
+    "@types/jest": "26.0.23",
+    "@types/react": "17.0.11",
+    "@types/react-dom": "17.0.8",
+    "conventional-changelog-conventionalcommits": "4.6.0",
+    "husky": "4.3.8",
+    "lerna": "4.0.0",
+    "prettier": "2.3.1",
+    "pretty-quick": "3.1.1",
+    "rimraf": "3.0.2",
+    "typescript": "4.3.4"
   },
   "husky": {
     "hooks": {
