--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -5,17 +5,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@consilio/library": "^1.9.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "@consilio/library": "1.9.0"
   },
   "devDependencies": {
-    "@types/jest": "25.1.2",
-    "@types/node": "13.7.1",
-    "@types/react": "16.9.20",
-    "@types/react-dom": "16.9.5",
-    "react-scripts": "3.4.0",
-    "typescript": "3.7.5"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
