--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "@types/jest": "26.0.23",
     "@types/react": "17.0.11",
     "@types/react-dom": "17.0.8",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
+    "eslint": "7.28.0",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
     "conventional-changelog-conventionalcommits": "4.6.0",
     "husky": "4.3.8",
     "lerna": "4.0.0",
